syntax = "proto3";

package plantd.common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/geoffjay/plantd/gen/proto/go/plantd/common/v1;commonv1";

// Standard error response
message Error {
  enum Code {
    CODE_UNSPECIFIED = 0;
    CODE_INVALID_ARGUMENT = 1;
    CODE_NOT_FOUND = 2;
    CODE_ALREADY_EXISTS = 3;
    CODE_PERMISSION_DENIED = 4;
    CODE_UNAUTHENTICATED = 5;
    CODE_INTERNAL = 6;
    CODE_UNAVAILABLE = 7;
  }
  
  Code code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Pagination support
message PageRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PageResponse {
  string next_page_token = 1;
  int32 total_count = 2;
}

// Metadata for all entities
message Metadata {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  int64 version = 4;
  map<string, string> labels = 5;
} 
