syntax = "proto3";

package plantd.health.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/geoffjay/plantd/gen/proto/go/plantd/health/v1;healthv1";

// Health service for all plantd services
service HealthService {
  // Check service health (replaces MDP heartbeat)
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Watch service health changes
  rpc Watch(HealthWatchRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1;  // Service name to check
}

message HealthCheckResponse {
  enum ServingStatus {
    SERVING_STATUS_UNSPECIFIED = 0;
    SERVING_STATUS_SERVING = 1;
    SERVING_STATUS_NOT_SERVING = 2;
    SERVING_STATUS_SERVICE_UNKNOWN = 3;
  }
  
  ServingStatus status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Duration uptime = 4;
  map<string, string> details = 5;
}

message HealthWatchRequest {
  string service = 1;
} 
